<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            android:text="@string/podaci_o_zdravstvenom_radniku" />

        <ImageView
            android:id="@+id/profileImg"
            android:layout_marginTop="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout"
        android:orientation="vertical"
        android:gravity="center"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AccentTextProfile"
            android:text="@string/ime" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PrimaryTextProfile"
            android:text="Neko"/>

        <EditText
            android:id="@+id/profileEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextProfile"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AccentTextProfile"
            android:text="@string/prezime"/>

        <TextView
            android:id="@+id/profileSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PrimaryTextProfile"
            android:text="Nekic"/>

        <EditText
            android:id="@+id/profileEditSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextProfile"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AccentTextProfile"
            android:text="@string/bolnica" />

        <TextView
            android:id="@+id/profileHospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PrimaryTextProfile"
            android:text="KCS"/>

        <EditText
            android:id="@+id/profileEditHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextProfile"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/bottomButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/prifileIzmeniBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:text="@string/izmeni" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/profileOdjavaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:text="@string/odjava" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomButtonsLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/profileOdustaniBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_weight="1"
                android:text="@string/odustani"/>


            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/profileSacuvajBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/sacuvaj"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>