<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/kartonTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Title"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            android:text="@string/karton_pacijenta"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorAccentDark"
            android:src="@drawable/ic_healing64"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kartonTopLayout"
        app:layout_constraintBottom_toTopOf="@id/kartonBottomLayout"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/kartonIme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"/>

        <EditText
            android:id="@+id/kartonPrezime"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stanje pri prijemu"
            android:textColor="@color/textPrimary"/>

        <EditText
            android:id="@+id/kartonStanjePrijem"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:text="Trenutno stanje"/>

        <EditText
            android:id="@+id/kartonStanjeSada"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:text="Datum prijema"/>

        <TextView
            android:id="@+id/kartonDatumPrijema"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:text="4.4.2020"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/kartonBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/kartonOdustaniBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/odustani"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/kartonIzmeniBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/izmeni"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>